[gd_scene load_steps=5 format=3 uid="uid://bqxwn0ta2soya"]

[ext_resource type="PackedScene" uid="uid://bodds8i3o14a6" path="res://Destructibles/Destructible/destructible.tscn" id="1_j3kdu"]
[ext_resource type="Script" path="res://Destructibles/Enemy/enemy.gd" id="2_mqvlq"]
[ext_resource type="Texture2D" uid="uid://c4umhjet2er17" path="res://Destructibles/Enemy/EnemyShip.png" id="3_an0ys"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wk5vf"]
size = Vector2(15, 8)

[node name="Enemy" instance=ExtResource("1_j3kdu")]
script = ExtResource("2_mqvlq")
speed = 5

[node name="HurtBox" parent="." index="0"]
position = Vector2(0, -3)
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_wk5vf")

[node name="Sprite2D" type="Sprite2D" parent="." index="2"]
z_index = 1
texture_filter = 1
position = Vector2(0, -3)
texture = ExtResource("3_an0ys")

[node name="LeftCast" type="RayCast2D" parent="." index="3"]
position = Vector2(0, 1)
target_position = Vector2(-8, 0)

[node name="RightCast" type="RayCast2D" parent="." index="4"]
position = Vector2(0, 1)
target_position = Vector2(8, 0)

[node name="PlayerDetection" type="Area2D" parent="." index="5"]
position = Vector2(0, -3)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection" index="0"]
position = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_wk5vf")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]

[editable path="HurtBox"]
